[package]
name = "camera-effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
flume = "0.10.12"
glium = "0.31.0"
nokhwa = { version = "0.9.4", features = ["input-msmf"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
